# ePC-SAFT-lab

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CMAKE.md  CMakeLists.txt  CMakePresets.json  CONTEXT.md  README.md  pyproject.toml  run_pytest.py
.codex/: config.toml  hooks.json
.codex/agents/: build_packaging_owner.toml  command_runner.toml  native_equation_owner.toml  native_solver_backend_owner.toml  python_api_test_owner.toml
.codex/environments/: README.md  environment.toml  setup.ps1  setup.sh
.codex/hooks/: epcsaft-session-start.cmd  epcsaft-session-start.ps1
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  downstream_dependency_bug.yml  feature.yml  gate_issue.yml  micro_issue.yml  task.yml  tracking_issue.yml  upstream_package_request.yml
.github/workflows/: native-build-profiles.yml  package-build-lanes.yml  publish-pypi.yml  sync-issue-readiness.yml  wheels.yml
.mplgallery/: manifest.yaml
.run/: Association Goal 1+2 Tests.run.xml  Association Goal 3 Tests.run.xml  Association Goal 4 Tests.run.xml  Association Goal 5 Tests.run.xml  Association Goal 6 Tests.run.xml  Bootstrap uv.run.xml  Build Distribution.run.xml  Build Docs.run.xml  Build Equations PDF.run.xml  Build Native Extension.run.xml  Build Native Incremental.run.xml  Build Parameter Catalog.run.xml  Build Provider-Only Core.run.xml  Build Status.run.xml  Build System Ceres.run.xml  CMake Build _core dev-native.run.xml  CMake Build dev-native.run.xml  CMake Configure dev-native.run.xml  Check Neutral TP Flash Fixture Debug.run.xml  Check Neutral TP Flash Fixture.run.xml  Check Phase Discovery Debug.run.xml  Check Phase Discovery.run.xml  Check Stage 10 Neutral TP Flash Proof Debug.run.xml  Check Stage 10 Neutral TP Flash Proof.run.xml  Check Stage 9 Phase Discovery Evidence Debug.run.xml  Check Stage 9 Phase Discovery Evidence.run.xml  Check Text Gates.run.xml  Clean Build Artifacts.run.xml  Configure IntelliJ Runs (Apply).run.xml  Configure IntelliJ Runs (Dry Run).run.xml  Create Dev Worktree.run.xml  Curate Paper Validation Parameters.run.xml  Doctor Script.run.xml  Extract Paper Parameter CSVs.run.xml  Generate Equilibrium Activation.run.xml  Install LaTeX Sync Hook.run.xml  Run Ipopt Exact Hessian Checks.run.xml  Run Ipopt Exact Hessian Proofs.run.xml  Setup LaTeX Mirror.run.xml  Sync Algorithm Registry.run.xml  (+61 more)
analyses/: AGENTS.md  README.md
analyses/_template/: README.md
analyses/digitization_benchmark/: README.md  analysis.yaml
analyses/paper_validation/: AGENTS.md
analyses/reference_oracles/equilibrium_formulations/cython_held2_experiment/: README.md  analysis.yaml  evidence_runner.py  pyproject.toml
analyses/reference_oracles/equilibrium_formulations/cython_held2_experiment/evidence/: build_receipt.json  perdomo_table3_cross_eos.json  provider_comparison.csv  stage1_receipt.json  stage2_receipt.json  stage3_manufactured.json  stage3_receipt.json  thermo_receipt.json
analyses/reference_oracles/equilibrium_formulations/cython_held2_experiment/src/cython_held2_experiment/: __init__.py  _held2.pyx  _smoke.pyx  _stage3.pyx  _thermo.pyx
analyses/reference_oracles/equilibrium_formulations/cython_held2_experiment/src/cython_held2_experiment/data/: __init__.py  figiel_2025_h2o_nacl.json
analyses/reference_oracles/equilibrium_formulations/cython_held2_experiment/tests/: test_build_smoke.py  test_stage1.py  test_stage2.py  test_stage3.py  test_thermo.py
build_backend/: epcsaft_build_backend.py
docs/: algorithms.md  algorithms_registry.yaml  conf.py  equations.md  equations_registry.yaml
docs/adr/: 0001-architecture-deepening-public-api-boundaries.md  0002-hard-public-api-reset-cppad-only-frontend.md  0003-selector-core-activation-capabilities.md  0004-associating-equilibrium-architecture.md  0005-narrow-associating-bubble-pressure-admission.md  0005-package-extension-split.md  0006-curated-multi-repository-ownership.md  0007-clean-ecosystem-doctrine.md  README.md
docs/agents/: INTELLIJ.md  agent-happy-path.md  domain.md  issue-tracker.md  new-agent-start-here.md  project-roadmap.json  project-roadmap.md  triage-labels.md
docs/contracts/: cpe-interface.md  explicit-association-closure.md  extension_compatibility.md  native_extension_boundary.md  ownership-and-maintainability.md  provider_api_v1.md  provider_native_sdk_v1.md
docs/derivation/: explicit_association_closure_for_pcsaft.tex
docs/goals/: README.md
docs/handoffs/: README.md  equilibrium-constructor-configured-api-handoff.md  native-topology-activation-matrix-completion-handoff.md
docs/latex/: .gitignore  .latexmkrc  algorithms.tex  equations.tex  equilibrium_formulations.tex  explicit_assocation.tex
docs/milestones/: PROJECT_CONTEXT.md  README.md
docs/pages/: README.rst  api_reference.rst  development_workflows.rst  diagnostics.rst  downstream_dependency_protocol.rst  downstream_local_installs.rst  electrolyte_lle_workflow.rst  electrolyte_vle_reactive_workflow.rst  equation_traceability.rst  equilibrium_architecture.rst  equilibrium_cookbook.rst  getting_started.rst  index.rst  native_debugging.rst  package_architecture.rst  package_guide.rst  parameter_regression.rst  parameter_schema.rst  project_structure.rst  publishing.rst  release_installation.rst  user_options.rst  user_parameter_templates.rst
docs/presentations/: _placeholder.md
docs/protocols/: build_package_dependency_protocol.rst
docs/releases/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.2.0.md
docs/roadmaps/: FULL_ROADMAP.md  README.md  association_derivative_goal_roadmap.md  equilibrium_benchmark_registry.yaml  explicit_association_closure_for_pcsaft.md  generalized_fluid_phase_equilibrium.md  generalized_fluid_phase_equilibrium_activation_matrix.md  (+8 more)
scripts/: README.md  _env.py  _epcsaft_oop.py  plot_outputs.py  sync-live.ps1  validate-issue-mirror.ps1  validate-plan-outcome-proof.ps1  validate-plan-task-use-cases.ps1  validate_issue_mirror.py  validate_plan_outcome_proof.py  validate_plan_task_use_cases.py
tests/: conftest.py
workbooks/: PC-SAFT Calculations - Hydrocarbon Basis.xlsm
(+2847 files in other folders)
